infra/k8s/timemanager-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timemanager-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timemanager
  template:
    metadata:
      labels:
        app: timemanager
    spec:
      containers:
        - name: timemanager
          image: ribbery009/timemanager
---
apiVersion: v1
kind: Service
metadata:
  name: timemanager-srv
spec:
  selector:
    app: timemanager
  ports:
    - name: timemanager
      protocol: TCP
      port: 3000
      targetPort: 3000
